# legend_db

./: .gitignore  Cargo.toml  README.md
asserts/: legend_db.desktop  legend_db.service
asserts/files/: legend_db.conf  legend_db.desktop  legend_db.service
docs/: 解析器Lexer.md
src/: custom_error.rs  lib.rs  main.rs
src/sql/: mod.rs  schema.rs
src/sql/engine/: engine.rs  kv.rs  mod.rs
src/sql/executor/: agg.rs  databases.rs  delete.rs  executor.rs  insert.rs  join.rs  mod.rs  mutation.rs  query.rs  schema.rs  update.rs
src/sql/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/sql/plan/: mod.rs  node.rs  planner.rs
src/sql/storage/: b_plus_tree.rs  disk.rs  engine.rs  keycode.rs  memory.rs  mod.rs  mvcc.rs
src/sql/types/: mod.rs
src/storage/: disk.rs  engine.rs  keycode.rs  memory.rs  mod.rs  mvcc.rs
src/utils/: custom_error.rs
