[package]
name = "legend_db"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.3"
bincode = "2.0.0-rc.3"
serde = {version = "1.0.215", features = ["derive"]}
serde_bytes = "0.11.15"
fs4 = "0.11.1"
cargo-deb = "2.8.0"
tempfile = "3.14.0"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = {version = "0.7.12", features = ["full"]}
rustyline = "14.0.0"
clap = {version = "4.5.36", features = ["derive"]}
# 后期考虑使用rkyv，提升效率
#rkyv = {version = "0.8.8", features = ["alloc", "std"]}
#rkyv_derive = "0.8.8"
#[workspace]
#members = ["sql"]
[package.metadata.deb]
maintainer = "legendqi <yuwenqigod@gmail.com>"
copyright = "2023, legendqi"
section = "utils"
priority = "optional"
assets = [
    ["target/release/legend", "usr/bin/", "755"],
    ["target/release/legend_db_server", "usr/bin/", "755"],
    ["asserts/icon/legend_db.png", "/usr/share/icons/apps/legend_db_logo.png", "644"],
    ["asserts/files/legend_db.desktop", "usr/share/applications/", "644"],
    ["asserts/files/legend_db.service", "/etc/systemd/system/", "644"],
    ["asserts/files/legend_db.conf", "/etc/legend_db/", "644"],
]
extended-description = """\
This is a simple SQL database implemented using Rust
"""
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"